# crossterm-winapi

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
docs/: CONTRIBUTING.md  known-problems.md
examples/: coloring_example.rs  handle.rs  screen_buffer.rs
src/: cfi.rs  console.rs  console_mode.rs  csbi.rs  handle.rs  lib.rs  screen_buffer.rs  semaphore.rs  structs.rs
src/structs/: coord.rs  input.rs  size.rs  window_coords.rs
