[package]
name = "crossterm_winapi"
version = "0.9.0"
authors = ["T. Post"]
description = "WinAPI wrapper that provides some basic simple abstractions around common WinAPI calls"
repository = "https://github.com/crossterm-rs/crossterm-winapi"
documentation = "https://docs.rs/crossterm_winapi/"
license = "MIT"
keywords = ["winapi", "abstractions", "crossterm", "windows", "screen_buffer"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [
        "winbase",
        "consoleapi",
        "processenv",
        "handleapi",
        "synchapi",
        "impl-default",
] }
windows-sys = { version = "0.42.0", features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_System_Console",
        "Win32_Storage_FileSystem",
        "Win32_System_SystemServices",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
