[package]
name = "crossterm_winapi"
version = "0.9.0"
authors = ["T. Post"]
description = "WinAPI wrapper that provides some basic simple abstractions around common WinAPI calls"
repository = "https://github.com/crossterm-rs/crossterm-winapi"
documentation = "https://docs.rs/crossterm_winapi/"
license = "MIT"
keywords = ["winapi", "abstractions", "crossterm", "windows", "screen_buffer"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2021"
rust-version = "1.62.0"

[target.'cfg(windows)'.dependencies]
# Note that 0.56.0 is the last version that supports Rust 1.62.0, the next version requires Rust
# 1.70.0. This would prevent crossterm from being able to compile this on the stable version of
# Debian (which ships with Rust 1.63.0).
windows = { version = "0.56.0", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
